--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.2",
     "nodemon": "^3.1.9",
+    "plotly.js": "^3.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "react-plotly.js": "^2.6.0",
     "react-router-dom": "^7.5.1",
     "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.3.1",
