--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
-    "axios": "^1.8.4",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "axios": "^1.12.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -25,6 +26,7 @@
     "lucide-react": "^0.536.0",
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.2",
+    "next-themes": "^0.4.6",
     "nodemon": "^3.1.9",
     "plotly.js": "^3.0.3",
     "react": "^19.0.0",
@@ -33,6 +35,7 @@
     "react-plotly.js": "^2.6.0",
     "react-router-dom": "^7.5.1",
     "react-toastify": "^11.0.5",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
   },
