Update Node.js version specification to allow for any version >=18

--- a/.github/workflows/quality-check.yml
+++ b/.github/workflows/quality-check.yml
@@ -13,7 +13,7 @@ jobs:
       # Setup Node.js
       - uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: ">=18"
 
       # Backend checks
       - name: Backend lint & test
