--- a/BackendMNS/vercel.json
+++ b/BackendMNS/vercel.json
@@ -1,15 +1,12 @@
 {
+  "version": 2,
   "builds": [
     {
-      "src": "server.js",
+      "src": "api/index.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/server.js",
-      "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"]
-    }
+    { "src": "/(.*)", "dest": "api/index.js" }
   ]
 }
