--- a/BackendMNS/vercel.json
+++ b/BackendMNS/vercel.json
@@ -7,6 +7,13 @@
     }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "api/index.js" }
+    {
+      "src": "/api/(.*)",
+      "dest": "api/index.js"
+    },
+    {
+      "src": "/test",
+      "dest": "api/index.js"
+    }
   ]
 }
